<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/custom_dialog_padding">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="60dp"
            android:layout_height="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/text_form_dialog_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCancel" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/text_form_dialog_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtName" />

        <TextView
            android:id="@+id/txtLastName"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="60dp"
            android:layout_height="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/text_form_dialog_last_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtName" />

        <EditText
            android:id="@+id/edtLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/text_form_dialog_last_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLastName" />

        <TextView
            android:id="@+id/txtEmail"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="60dp"
            android:layout_height="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/text_form_dialog_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtLastName" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/text_form_dialog_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

        <TextView
            android:id="@+id/txtCI"
            android:layout_width="60dp"
            android:layout_height="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/text_form_dialog_ci"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

        <EditText
            android:id="@+id/edtCI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/text_form_dialog_ci"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCI" />

        <TextView
            android:id="@+id/txtAddress"
            android:layout_width="60dp"
            android:layout_height="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/text_form_dialog_direccion"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtCI" />

        <EditText
            android:id="@+id/edtAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/text_form_dialog_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAddress" />

        <LinearLayout
            android:id="@+id/linearl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.626"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtAddress">

            <RadioGroup
                android:id="@+id/gpRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rdCorriente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_form_dialog_corriente" />

                <RadioButton
                    android:id="@+id/rdDiferido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_form_dialog_diferido" />

                <RadioButton
                    android:id="@+id/rdDiferidoSin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_form_dialog_diferido_sin" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/btnPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/text_form_dialog_pay"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearl" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>







